[#109] Fix antd gutter overflow issue

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -310,3 +310,9 @@
   background: transparent;
   border-style: dashed;
 }
+
+// to solve antd overflow gutter issue
+.ant-row {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
